Update handle of filterCatalogs by userId